crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__cline_resp_context.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 346
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  cancel: false
  contextModification:
    additionalContext: "aiguard: all clear"
exit_code: 0
