crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__crush_resp_block.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 274
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  decision: block
  reason: denied
exit_code: 2
